--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.10",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.2",
     "react-redux": "^7.2.6",
