--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.10",
