--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.1",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.8.1",
